--- a/test_app/CMakeLists.txt
+++ b/test_app/CMakeLists.txt
@@ -5,3 +5,4 @@ set( CMAKE_CXX_STANDARD_REQUIRED ON)
 set (SRC main.cpp)
 
 add_executable(${PROJECT_NAME} ${SRC})
+target_link_libraries(${PROJECT_NAME} arg_parser)
