fixes on cmake changes

--- a/arg_parser/CMakeLists.txt
+++ b/arg_parser/CMakeLists.txt
@@ -1,4 +1,5 @@
 get_filename_component(MODULE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
+project(${MODULE_NAME} LANGUAGES CXX)
 
 file(GLOB SRC ./*.cpp)
 list(LENGTH SRC SRC_SIZE)
@@ -14,10 +15,16 @@ message("src" ${SRC})
 message("tests" ${TESTS})
 message("mocks" ${MOCKS})
 
-add_library(${MODULE_NAME} ${SRC})
+#library
+
+add_library(${MODULE_NAME} OBJECT ${SRC})
+target_include_directories(${MODULE_NAME} PUBLIC 
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
+add_library(ArgParser::ArgParser ALIAS ${MODULE_NAME})
+
+#tests
 
 add_executable(${MODULE_NAME}_tests ${TESTS})
-
 find_package(Threads REQUIRED)
 find_package(GTest REQUIRED)
 message(${MODULE_NAME} ${CMAKE_CURRENT_SOURCE_DIR})
@@ -25,7 +32,6 @@ target_include_directories(${MODULE_NAME}_tests PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
     
 target_link_libraries(${MODULE_NAME}_tests ${MODULE_NAME} GTest::GTest GTest::Main)
-
 
 add_test(NAME ${MODULE_NAME}_tests COMMAND ${MODULE_NAME}_tests
     WORKING_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})
