--- a/test_app/CMakeLists.txt
+++ b/test_app/CMakeLists.txt
@@ -1,8 +1,6 @@
 project( example_app CXX)
-set( CMAKE_CXX_STANDARD 20)
-set( CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set (SRC main.cpp)
 
 add_executable(${PROJECT_NAME} ${SRC})
-target_link_libraries(${PROJECT_NAME} arg_parser)
+target_link_libraries(${PROJECT_NAME} ArgParser::ArgParser)
