--- a/test_app/CMakeLists.txt
+++ b/test_app/CMakeLists.txt
@@ -3,4 +3,4 @@ project( example_app CXX)
 set (SRC main.cpp)
 
 add_executable(${PROJECT_NAME} ${SRC})
-target_link_libraries(${PROJECT_NAME} ArgParser::ArgParser fmt)
+target_link_libraries(${PROJECT_NAME} ArgParser::ArgParser ${CONAN_LIBS_FMT})
