--- a/arg_parser/CMakeLists.txt
+++ b/arg_parser/CMakeLists.txt
@@ -2,6 +2,7 @@ get_filename_component(MODULE_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 project(${MODULE_NAME} LANGUAGES CXX)
 
 file(GLOB SRC ./*.cpp)
+file(GLOB HDR ./*.h)
 list(LENGTH SRC SRC_SIZE)
 file(GLOB TESTS ./*_test.cpp)
 list(LENGTH TESTS TESTS_SIZE)
@@ -9,15 +10,10 @@ file(GLOB MOCKS ./*_mock.cpp)
 list(LENGTH MOCKS MOCKS_SIZE)
 
 list(REMOVE_ITEM SRC ${TESTS})
-#list(REMOVE_ITEM SRC ${MOCKS})
-
-message("src" ${SRC})
-message("tests" ${TESTS})
-message("mocks" ${MOCKS})
 
 #library
 
-add_library(${MODULE_NAME} OBJECT ${SRC})
+add_library(${MODULE_NAME} ${SRC})
 target_include_directories(${MODULE_NAME} PUBLIC 
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
 add_library(ArgParser::ArgParser ALIAS ${MODULE_NAME})
@@ -35,3 +31,7 @@ foreach (TEST  ${TESTS})
     target_link_libraries(${TEST_NAME} ${MODULE_NAME} GTest::GTest GTest::Main ${CONAN_LIBS_FMT})        
     add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME} WORKING_DIRECTORY ${EXECUTABLE_OUTPUT_PATH})
 endforeach(TEST)
+
+#install
+install(TARGETS ${MODULE_NAME} DESTINATION "lib")
+install(FILES ${HDR} DESTINATION "include")
